# Examen2_IS2

./: README.md
prueba_examen2/: CMakeLists.txt
prueba_examen2/src/taskManager.cpp/: gestor_de_tareas.cpp  gestor_de_tareas.h  taskManagerApp.cpp
prueba_examen2/tests/: gestor_de_tareas_test.cpp
